Fix flagship code snippet being too wide on mobile

--- a/main/src/page/home/home-page.component.scss
+++ b/main/src/page/home/home-page.component.scss
@@ -30,7 +30,7 @@
         }
     }
 
-    .td-illustration-container {
+    .td-illustration-wrapper {
         @media (max-width: media.$max-width-mobile) {
             transform: scale(0.86);
         }
@@ -39,7 +39,6 @@
     td-illustration {
         flex: unset !important;
         box-shadow: 0 0 6px 3px rgba(colors.$secondary-blue, 0.35);
-        padding: 12px;
         animation-play-state: running !important;
         position: relative;
         max-height: unset !important;
@@ -48,6 +47,7 @@
 
         @media (min-width: media.$min-width-tablet) {
             margin-top: 32px;
+            padding: 12px;
 
             td-code-snippet {
                 .cs-line-numbers, code {
